2024 Day 6 & 3 small refactor